--- a/publish.yaml
+++ b/publish.yaml
@@ -9,5 +9,5 @@ jobs:
   publish:
     uses: datum-cloud/actions/.github/workflows/publish-docker.yaml@v1.0.0
     with:
-      image-name: workload-operator
+      image-name: telemetry-services-operator
     secrets: inherit
