--- a/config/crd/bases/telemetry.datumapis.com_exportpolicies.yaml
+++ b/config/crd/bases/telemetry.datumapis.com_exportpolicies.yaml
@@ -4,20 +4,20 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: v0.17.2
-  name: exporters.telemetry.datumapis.com
+  name: exportpolicies.telemetry.datumapis.com
 spec:
   group: telemetry.datumapis.com
   names:
-    kind: Exporter
-    listKind: ExporterList
-    plural: exporters
-    singular: exporter
+    kind: ExportPolicy
+    listKind: ExportPolicyList
+    plural: exportpolicies
+    singular: exportpolicy
   scope: Namespaced
   versions:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: Exporter is the Schema for the exporters API.
+        description: ExportPolicy is the Schema for the exporters API.
         properties:
           apiVersion:
             description: |-
@@ -38,12 +38,12 @@ spec:
             type: object
           spec:
             description: |-
-              Describes the expected state of the Exporter's configuration. The control
+              Describes the expected state of the ExportPolicy's configuration. The control
               plane will constantly evaluate the current state of the exporter that's
               deployed and ensure it matches the expected configuration. This field is
               required when configuring an exporter.
             properties:
-              exporters:
+              sinks:
                 description: |-
                   Configures how the exporter should send telemetry data to third-party
                   telemetry platforms. Multiple sinks can be configured to export telemetry
@@ -113,12 +113,10 @@ spec:
                               - secretRef
                               type: object
                           type: object
-                        endpoint:
-                          description: The HTTP endpoint that should be used to publish
+                        http:
+                          description: Configure an HTTP endpoint to use for publishing
                             telemetry data.
-                          type: string
-                      required:
-                      - endpoint
+                          type: object
                       type: object
                     retry:
                       description: |-
@@ -187,7 +185,7 @@ spec:
                   type: object
                 type: array
             required:
-            - exporters
+            - sinks
             - sources
             type: object
           status:
