--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,14 @@
   "image": "docker.io/golang:1.23",
   "features": {
     "ghcr.io/devcontainers/features/docker-in-docker:2": {},
-    "ghcr.io/devcontainers/features/git:1": {}
+    "ghcr.io/devcontainers/features/git:1": {},
+    "ghcr.io/devcontainers/features/common-utils": {
+      "installOhMyZsh": true,
+      "configureZshAsDefaultShell": true,
+      "installOhMyZshConfig": true,
+      "installZsh": true,
+      "upgradePackages": true
+    }
   },
 
   "runArgs": ["--network=host"],
@@ -22,4 +29,3 @@
 
   "onCreateCommand": "bash .devcontainer/post-install.sh"
 }
-
