--- a/config/crd/bases/telemetry.datumapis.com_exportpolicies.yaml
+++ b/config/crd/bases/telemetry.datumapis.com_exportpolicies.yaml
@@ -17,7 +17,7 @@ spec:
   - name: v1alpha1
     schema:
       openAPIV3Schema:
-        description: ExportPolicy is the Schema for the exporters API.
+        description: ExportPolicy is the Schema for the export policy API.
         properties:
           apiVersion:
             description: |-
@@ -38,20 +38,19 @@ spec:
             type: object
           spec:
             description: |-
-              Describes the expected state of the ExportPolicy's configuration. The control
-              plane will constantly evaluate the current state of the exporter that's
-              deployed and ensure it matches the expected configuration. This field is
-              required when configuring an exporter.
+              Describes the expected state of the ExportPolicy's configuration. The
+              control plane will constantly evaluate the current state of exporters that
+              are deployed and ensure it matches the expected configuration. This field
+              is required when configuring an export policy.
             properties:
               sink:
                 description: |-
-                  Configures how the exporter should send telemetry data to third-party
-                  telemetry platforms.
+                  Configures how telemetry data should be sent to a third-party telemetry
+                  platforms.
                 properties:
                   batch:
-                    description: |-
-                      Configures how the exporter should batch telemetry data before sending to
-                      the sink.
+                    description: Configures how telemetry data should be batched before
+                      sending to the sink.
                     properties:
                       maxSize:
                         default: 500
@@ -66,15 +65,10 @@ spec:
                     - maxSize
                     - timeout
                     type: object
-                  name:
-                    description: |-
-                      A name given to the telemetry source that's unique within the exporter.
-                      Must be a valid DNS label.
-                    type: string
                   otlp_http:
                     description: |-
-                      Configures the exporter to publish telemetry using the HTTP version of the
-                      OTLP protocol.
+                      Configures the export policy to publish telemetry using the HTTP version of
+                      the OTLP protocol.
 
                       See: https://opentelemetry.io/docs/specs/otel/protocol/
                     properties:
@@ -121,9 +115,10 @@ spec:
                     type: object
                   retry:
                     description: |-
-                      Configures the exporter's retry behavior when it fails to send requests to
-                      the sink's endpoint. There's no guarantees that the exporter will retry
-                      until success if the endpoint is not available or configured incorrectly.
+                      Configures the export policies' retry behavior when it fails to send
+                      requests to the sink's endpoint. There's no guarantees that the export
+                      policy will retry until success if the endpoint is not available or
+                      configured incorrectly.
                     properties:
                       backoffDuration:
                         default: 5s
@@ -140,19 +135,17 @@ spec:
                     - backoffDuration
                     - maxAttempts
                     type: object
-                required:
-                - name
                 type: object
               sources:
                 description: |-
-                  Defines how the exporter should source telemetry data to publish to the
-                  configured sinks. An exporter can define multiple telemetry sources. The
-                  exporter will **not** de-duplicate telemetry data that matches multiple
-                  sources.
+                  Defines how the export policy should source telemetry data to publish to
+                  the configured sinks. An export policy can define multiple telemetry
+                  sources. The export policy will **not** de-duplicate telemetry data that
+                  matches multiple sources.
                 items:
                   description: |-
-                    Defines how the exporter should source telemetry data from resources on the
-                    platform.
+                    Defines how the export policy should source telemetry data from resources on
+                    the platform.
                   properties:
                     metrics:
                       description: |-
@@ -163,22 +156,19 @@ spec:
                           description: |-
                             The MetricSQL option allows to user to provide a metricsql query that can
                             be used to select and filter metric data that should be published by the
-                            exporter.
+                            export policy.
 
-                            Here's an example of a metricsql query that will publish gateway metrics
-                            from the exporter:
+                            Here's an example of a metricsql query that will publish gateway metrics:
 
-                            ```
-                            {service_name=“networking.datumapis.com”, resource_kind="Gateway"}
-                            ```
+                            ``` {service_name=“networking.datumapis.com”, resource_kind="Gateway"} ```
 
                             See: https://docs.victoriametrics.com/metricsql/
                           type: string
                       type: object
                     name:
                       description: |-
-                        A unique name given to the telemetry source within an exporter. Must be a
-                        valid DNS label.
+                        A unique name given to the telemetry source within an export policy. Must
+                        be a valid DNS label.
                       type: string
                   required:
                   - name
@@ -190,15 +180,15 @@ spec:
             type: object
           status:
             description: |-
-              Provides information on the current state of the exporter that was observed
-              by the control plane. This will be continuously updated as the control
-              plane monitors the exporter.
+              Provides information on the current state of the export policy that was
+              observed by the control plane. This will be continuously updated as the
+              control plane monitors exporters.
             properties:
               conditions:
                 description: |-
-                  Provides a summary of the conditions for the exporter as a whole. This may
-                  be based on other conditions available on the exporter. See the sink
-                  conditions for more information on each sink.
+                  Provides status information on the current status of the sink. This can be
+                  used to determine whether a sink is configured correctly and is exporting
+                  telemetry data.
 
                   Known condition types are: "Ready"
                 items:
@@ -262,5 +252,3 @@ spec:
         type: object
     served: true
     storage: true
-    subresources:
-      status: {}
