--- a/config/rbac/exportpolicy_viewer_role.yaml
+++ b/config/rbac/exportpolicy_viewer_role.yaml
@@ -1,9 +1,9 @@
 # This rule is not used by the project telemetry-services-operator itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
-# Grants full permissions ('*') over telemetry.datumapis.com.
-# This role is intended for users authorized to modify roles and bindings within the cluster,
-# enabling them to delegate specific permissions to other users or groups as needed.
+# Grants read-only access to telemetry.datumapis.com resources.
+# This role is intended for users who need visibility into these resources
+# without permissions to modify them. It is ideal for monitoring purposes and limited-access viewing.
 
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -11,17 +11,19 @@ metadata:
   labels:
     app.kubernetes.io/name: telemetry-services-operator
     app.kubernetes.io/managed-by: kustomize
-  name: exporter-admin-role
+  name: exportpolicy-viewer-role
 rules:
 - apiGroups:
   - telemetry.datumapis.com
   resources:
-  - exporters
+  - exportpolicies
   verbs:
-  - '*'
+  - get
+  - list
+  - watch
 - apiGroups:
   - telemetry.datumapis.com
   resources:
-  - exporters/status
+  - exportpolicies/status
   verbs:
   - get
