--- a/config/crd/bases/telemetry.datumapis.com_exportpolicies.yaml
+++ b/config/crd/bases/telemetry.datumapis.com_exportpolicies.yaml
@@ -65,7 +65,7 @@ spec:
                     - maxSize
                     - timeout
                     type: object
-                  otlp_http:
+                  openTelemetry:
                     description: |-
                       Configures the export policy to publish telemetry using the HTTP version of
                       the OTLP protocol.
@@ -252,3 +252,5 @@ spec:
         type: object
     served: true
     storage: true
+    subresources:
+      status: {}
