--- a/config/samples/telemetry_v1alpha1_exportpolicy.yaml
+++ b/config/samples/telemetry_v1alpha1_exportpolicy.yaml
@@ -20,19 +20,20 @@ spec:
         # familiar with using metricsql queries to select metric data from
         # Victoria Metrics.
         metricsql: |
-          {service_name="networking.datumapis.com", resource_kind="Gateway" __name__=~"network_bytes_.*"}
-  sink:
-    openTelemetry:
-      http:
-        endpoint: "https://otlp-gateway-prod-eu-west-0.grafana.net/otlp"
-      authentication:
-        bearerToken:
-          secretRef:
-            name: "grafana-api-key"
-            key: "token"
-    batch:
-      timeout: 5s     # Batch timeout before sending telemetry
-      maxSize: 500    # Maximum number of telemetry entries per batch
-    retry:
-      maxAttempts: 3  # Maximum retry attempts
-      backoffDuration: 2s     # Delay between retry attempts
+          {job="telemetry-system/envoy-proxies"}
+  sinks:
+    - name: grafana-cloud-metrics
+      sources:
+        - gateway-metrics
+      prometheusRemoteWrite:
+        endpoint: "https://prometheus-prod-56-prod-us-east-2.grafana.net/api/prom/push"
+        authentication:
+          basicAuth:
+            secretRef:
+              name: "grafana-cloud-credentials"
+      batch:
+        timeout: 5s     # Batch timeout before sending telemetry
+        maxSize: 500    # Maximum number of telemetry entries per batch
+      retry:
+        maxAttempts: 3  # Maximum retry attempts
+        backoffDuration: 2s     # Delay between retry attempts
