--- a/config/vector/kustomization.yaml
+++ b/config/vector/kustomization.yaml
@@ -7,3 +7,9 @@ configMapGenerator:
   - name: base-vector-config
     files:
       - base-vector-config.yaml
+  - name: test-vector-config
+    files:
+      - test-vector-config.yaml
+    options:
+      labels:
+        export-policy-vector-config: "true"
