--- a/config/crd/bases/telemetry.datumapis.com_exportpolicies.yaml
+++ b/config/crd/bases/telemetry.datumapis.com_exportpolicies.yaml
@@ -89,7 +89,7 @@ spec:
                                     secretRef:
                                       description: |-
                                         Configures which secret is used to retrieve the bearer token to add to the
-                                        authorization header. Secret must be a
+                                        authorization header. Secret must be a `kubernetes.io/basic-auth` type.
                                       properties:
                                         name:
                                           description: The name of the secret
@@ -97,40 +97,6 @@ spec:
                                       required:
                                       - name
                                       type: object
-                                  required:
-                                  - secretRef
-                                  type: object
-                                bearerToken:
-                                  description: |-
-                                    Configures the sink to use a Bearer token in the authorization header when
-                                    authenticating with the configured endpoint.
-                                  properties:
-                                    secretRef:
-                                      description: |-
-                                        Configures which secret is used to retrieve the bearer token to add to the
-                                        authorization header.
-                                      properties:
-                                        key:
-                                          description: The key of the secret to select
-                                            from.  Must be a valid secret key.
-                                          type: string
-                                        name:
-                                          default: ""
-                                          description: |-
-                                            Name of the referent.
-                                            This field is effectively required, but due to backwards compatibility is
-                                            allowed to be empty. Instances of this type with an empty value here are
-                                            almost certainly wrong.
-                                            More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                                          type: string
-                                        optional:
-                                          description: Specify whether the Secret
-                                            or its key must be defined
-                                          type: boolean
-                                      required:
-                                      - key
-                                      type: object
-                                      x-kubernetes-map-type: atomic
                                   required:
                                   - secretRef
                                   type: object
