--- a/config/vector/deployment.yaml
+++ b/config/vector/deployment.yaml
@@ -56,7 +56,7 @@ spec:
             - name: NAMESPACE
               value: ALL
             - name: LABEL
-              value: "export-policy-vector-config"
+              value: "telemetry.datumapis.com/vector-export-policy-config"
             - name: LABEL_VALUE
               value: "true"
             - name: FOLDER
