--- a/config/samples/telemetry_v1alpha1_exportpolicy.yaml
+++ b/config/samples/telemetry_v1alpha1_exportpolicy.yaml
@@ -25,15 +25,16 @@ spec:
     - name: grafana-cloud-metrics
       sources:
         - gateway-metrics
-      prometheusRemoteWrite:
-        endpoint: "https://prometheus-prod-56-prod-us-east-2.grafana.net/api/prom/push"
-        authentication:
-          basicAuth:
-            secretRef:
-              name: "grafana-cloud-credentials"
-      batch:
-        timeout: 5s     # Batch timeout before sending telemetry
-        maxSize: 500    # Maximum number of telemetry entries per batch
-      retry:
-        maxAttempts: 3  # Maximum retry attempts
-        backoffDuration: 2s     # Delay between retry attempts
+      target:
+        prometheusRemoteWrite:
+          endpoint: "https://prometheus-prod-56-prod-us-east-2.grafana.net/api/prom/push"
+          authentication:
+            basicAuth:
+              secretRef:
+                name: "grafana-cloud-credentials"
+          batch:
+            timeout: 5s     # Batch timeout before sending telemetry
+            maxSize: 500    # Maximum number of telemetry entries per batch
+          retry:
+            maxAttempts: 3  # Maximum retry attempts
+            backoffDuration: 2s     # Delay between retry attempts
